Fix HTML validation errors

--- a/documentation/operators/average.html
+++ b/documentation/operators/average.html
@@ -13,7 +13,7 @@ id: average
    <h1>Average</h1>
    <h3>calculates the average of numbers emitted by an Observable and emits this average</h3>
    <figure>
-    <img src="images/average.c.png" width="100%" alt="Average" />
+    <img src="images/average.c.png" style="width:100%;" alt="Average" />
     <figcaption><p>
      The <span class="operator">Average</span> operator operates on an Observable that emits numbers
      (or items that can be evaluated as numbers), and emits a single value: the average of all of
@@ -69,7 +69,7 @@ Observable.averageInteger(myObservable).subscribe(
 2
 Sequence complete</pre></div>
      <figure>
-      <img src="images/average.f.png" width="100%" alt="average" />
+      <img src="images/average.f.png" style="width:100%;" alt="average" />
       <figcaption><p>
        You can also average not the items themselves but the results of a function applied to each
        item, as in the illustration above, which emits the average number of sides on the figures
@@ -89,7 +89,7 @@ Sequence complete</pre></div>
       <code>averageFloat</code>, <code>averageInteger</code>, and <code>averageLong</code>.
      </p>
      <figure>
-      <img src="images/average.f.png" width="100%" alt="average" />
+      <img src="images/average.f.png" style="width:100%;" alt="average" />
       <figcaption><p>
        You can also average not the items themselves but the results of a function applied to each
        item, as in the illustration above, which emits the average number of sides on the figures
@@ -104,7 +104,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJS average %}
      <figure>
-      <img src="images/average.png" width="100%" alt="average" />
+      <img src="images/average.png" style="width:100%;" alt="average" />
       <figcaption><p>
        RxJS implements this operator as <code>average</code>. The following code sample shows how
        to use it:
@@ -128,7 +128,7 @@ Next: 4
 Completed</pre></div></figcaption>
      </figure>
      <figure>
-      <img src="images/average.f.png" width="100%" alt="average" />
+      <img src="images/average.f.png" style="width:100%;" alt="average" />
       <figcaption><p>
        You can also average not the items themselves but the results of a function applied to each
        item, as in the illustration above, which emits the average number of sides on the figures
