--- a/documentation/operators/defaultifempty.html
+++ b/documentation/operators/defaultifempty.html
@@ -13,7 +13,7 @@ id: defaultIfEmpty
    <h1>DefaultIfEmpty</h1>
    <h3>emit items from the source Observable, or a default item if the source Observable emits nothing</h3>
    <figure>
-    <img src="images/defaultIfEmpty.c.png" width="100%" alt="DefaultIfEmpty" />
+    <img src="images/defaultIfEmpty.c.png" style="width:100%;" alt="DefaultIfEmpty" />
     <figcaption><p>
      The <span class="operator">DefaultIfEmpty</span> operator simply mirrors the source Observable exactly
      if the source Observable emits any items. If the source Observable terminates normally (with an
@@ -45,7 +45,7 @@ id: defaultIfEmpty
 
   {% lang_operator RxGroovy defaultIfEmpty %}
      <figure>
-      <img src="images/defaultIfEmpty.png" width="100%" alt="defaultIfEmpty" />
+      <img src="images/defaultIfEmpty.png" style="width:100%;" alt="defaultIfEmpty" />
       <figcaption><p>
        RxGroovy implements this operator as <code>defaultIfEmpty</code>.
       </p><p>
@@ -58,7 +58,7 @@ id: defaultIfEmpty
 
   {% lang_operator RxJava defaultIfEmpty %}
      <figure>
-      <img src="images/defaultIfEmpty.png" width="100%" alt="defaultIfEmpty" />
+      <img src="images/defaultIfEmpty.png" style="width:100%;" alt="defaultIfEmpty" />
       <figcaption><p>
        RxJava implements this operator as <code>defaultIfEmpty</code>.
       </p><p>
@@ -71,7 +71,7 @@ id: defaultIfEmpty
 
   {% lang_operator RxJS defaultIfEmpty %}
      <figure>
-      <img src="images/defaultIfEmpty.png" width="100%" alt="defaultIfEmpty" />
+      <img src="images/defaultIfEmpty.png" style="width:100%;" alt="defaultIfEmpty" />
       <figcaption><p>
        RxJS implements <code>defaultIfEmpty</code>, but the parameter that sets the default value is optional.
        If you do not pass this default value, <code>defaultIfEmpty</code> will emit a
