--- a/documentation/operators/elementat.html
+++ b/documentation/operators/elementat.html
@@ -14,7 +14,7 @@ id: elementAt
    <h3>emit only item <i>n</i> emitted by an Observable</h3>
 
    <figure>
-    <img src="images/elementAt.c.png" width="100%" alt="ElementAt" />
+    <img src="images/elementAt.c.png" style="width:100%;" alt="ElementAt" />
     <figcaption><p>
      The <code>ElementAt</code> operator pulls an item located at a specified index location in the sequence
      of items emitted by the source Observable and emits that item as its own sole emission.
@@ -46,7 +46,7 @@ id: elementAt
 
   {% lang_operator RxGroovy elementAt elementAtOrDefault %}
      <figure>
-      <img src="images/elementAt.png" width="100%" alt="elementAt" />
+      <img src="images/elementAt.png" style="width:100%;" alt="elementAt" />
       <figcaption><p>
        RxGroovy implements this operator as <code>elementAt</code>. Pass <code>elementAt</code> a zero-based
        index value and it will emit the solitary item from the source Observable&#8217;s sequence that matches
@@ -62,7 +62,7 @@ id: elementAt
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/elementAtOrDefault.png" width="100%" alt="elementAtOrDefault" />
+      <img src="images/elementAtOrDefault.png" style="width:100%;" alt="elementAtOrDefault" />
       <figcaption><p>
        RxGroovy also implements the <code>elementAtOrDefault</code> operator. It differs from
        <code>elementAt</code> in that it will not throw an exception if the source Observable emits fewer than
@@ -84,7 +84,7 @@ id: elementAt
 
   {% lang_operator RxJava elementAt elementAtOrDefault %}
      <figure>
-      <img src="images/elementAt.png" width="100%" alt="elementAt" />
+      <img src="images/elementAt.png" style="width:100%;" alt="elementAt" />
       <figcaption><p>
        RxGroovy implements this operator as <code>elementAt</code>. Pass <code>elementAt</code> a zero-based
        index value and it will emit the solitary item from the source Observable&#8217;s sequence that matches
@@ -100,7 +100,7 @@ id: elementAt
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/elementAtOrDefault.png" width="100%" alt="elementAtOrDefault" />
+      <img src="images/elementAtOrDefault.png" style="width:100%;" alt="elementAtOrDefault" />
       <figcaption><p>
        RxGroovy also implements the <code>elementAtOrDefault</code> operator. It differs from
        <code>elementAt</code> in that it will not throw an exception if the source Observable emits fewer than
@@ -122,7 +122,7 @@ id: elementAt
 
   {% lang_operator RxJS elementAt elementAtOrDefault %}
      <figure>
-      <img src="images/elementAt.png" width="100%" alt="elementAt" />
+      <img src="images/elementAt.png" style="width:100%;" alt="elementAt" />
       <figcaption><p>
        RxJS implements this operator as <code>elementAt</code>. Pass <code>elementAt</code> a zero-based
        index value and it will emit the solitary item from the source Observable&#8217;s sequence that matches
@@ -146,7 +146,7 @@ Next: 2
 Completed</pre></div></figcaption>
      </figure>
      <figure>
-      <img src="images/elementAtOrDefault.png" width="100%" alt="elementAtOrDefault" />
+      <img src="images/elementAtOrDefault.png" style="width:100%;" alt="elementAtOrDefault" />
       <figcaption><p>
        The <code>elementAtOrDefault</code> operator is similar, except that if there is no element in the
        source sequence with the index value you specify, it will emit a default value of your choosing (rather
