--- a/documentation/operators/empty-never-throw.html
+++ b/documentation/operators/empty-never-throw.html
@@ -13,17 +13,17 @@ id: empty-never-throw
 <h1>Empty</h1>
 <h3>create an Observable that emits no items but terminates normally</h3>
 <figure>
-  <img src="images/empty.c.png" width="100%" alt="Empty" />
+  <img src="images/empty.c.png" style="width:100%;" alt="Empty" />
 </figure>
 <h1>Never</h1>
 <h3>create an Observable that emits no items and does not terminate</h3>
 <figure>
-  <img src="images/never.c.png" width="100%" alt="Never" />
+  <img src="images/never.c.png" style="width:100%;" alt="Never" />
 </figure>
 <h1>Throw</h1>
 <h3>create an Observable that emits no items and terminates with an error</h3>
 <figure>
-  <img src="images/throw.c.png" width="100%" alt="Throw" />
+  <img src="images/throw.c.png" style="width:100%;" alt="Throw" />
 </figure>
 
 <p>
