--- a/documentation/operators/ignoreelements.html
+++ b/documentation/operators/ignoreelements.html
@@ -13,7 +13,7 @@ id: ignoreElements
    <h1>IgnoreElements</h1>
    <h3>do not emit any items from an Observable but mirror its termination notification</h3>
    <figure>
-    <img src="images/ignoreElements.c.png" width="100%" alt="IgnoreElements" />
+    <img src="images/ignoreElements.c.png" style="width:100%;" alt="IgnoreElements" />
     <figcaption><p>
      The <span class="operator">IgnoreElements</span> operator suppresses all of the items emitted by the
      source Observable, but allows its termination notification (either <code>onError</code> or
@@ -48,7 +48,7 @@ id: ignoreElements
 
   {% lang_operator RxGroovy ignoreElements %}
      <figure>
-      <img src="images/ignoreElements.png" width="100%" alt="ignoreElements" />
+      <img src="images/ignoreElements.png" style="width:100%;" alt="ignoreElements" />
       <figcaption><p>
        RxGroovy implements this operator as <code>ignoreElements</code>.
       </p>
@@ -64,7 +64,7 @@ id: ignoreElements
 
   {% lang_operator RxJava ignoreElements %}
      <figure>
-      <img src="images/ignoreElements.png" width="100%" alt="ignoreElements" />
+      <img src="images/ignoreElements.png" style="width:100%;" alt="ignoreElements" />
       <figcaption><p>
        RxJava implements this operator as <code>ignoreElements</code>.
       </p>
@@ -80,7 +80,7 @@ id: ignoreElements
 
   {% lang_operator RxJS ignoreElements %}
      <figure>
-      <img src="images/ignoreElements.png" width="100%" alt="ignoreElements" />
+      <img src="images/ignoreElements.png" style="width:100%;" alt="ignoreElements" />
       <figcaption><p>
        RxJS implements this operator as <code>ignoreElements</code>.
       </p>
