--- a/documentation/operators/repeat.html
+++ b/documentation/operators/repeat.html
@@ -14,7 +14,7 @@ id: repeat
 <h3>create an Observable that emits a particular item multiple times</h3>
 
 <figure>
- <img src="images/repeat.c.png" width="100%" alt="Repeat" />
+ <img src="images/repeat.c.png" style="width:100%;" alt="Repeat" />
  <figcaption><p>
   The <span class="operator">Repeat</span> operator emits an item repeatedly. Some implementations
   of this operator allow you to repeat a <em>sequence</em> of items, and some permit you to limit
@@ -47,7 +47,7 @@ id: repeat
 
   {% lang_operator RxGroovy doWhile repeat repeatWhen whileDo %}
     <figure class="variant">
-     <img src="images/repeat.o.png" width="100%" alt="repeat" />
+     <img src="images/repeat.o.png" style="width:100%;" alt="repeat" />
      <figcaption><p>
       RxGroovy implements this operator as <code>repeat</code>. It does not initiate an Observable,
       but operates on an Observable in such a way that it repeats the sequence emitted by the
@@ -66,7 +66,7 @@ id: repeat
      </ul></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/repeatWhen.f.png" width="100%" alt="repeatWhen" />
+     <img src="images/repeatWhen.f.png" style="width:100%;" alt="repeatWhen" />
      <figcaption><p>
       There is also an operator called <code>repeatWhen</code>. Rather than buffering and replaying
       the sequence from the source Observable, it <em>resubscribes</em> to and mirrors the source
@@ -90,7 +90,7 @@ id: repeat
      </ul></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/doWhile.png" width="100%" alt="doWhile" />
+     <img src="images/doWhile.png" style="width:100%;" alt="doWhile" />
      <figcaption><p>
       In RxGroovy, <code>doWhile</code> is not part of the standard set of operators, but is part of the
       optional <code>rxjava-computation-expressions</code> package.  <code>doWhile</code> checks a condition
@@ -98,7 +98,7 @@ id: repeat
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/whileDo.png" width="100%" alt="whileDo" />
+     <img src="images/whileDo.png" style="width:100%;" alt="whileDo" />
      <figcaption><p>
       In RxGroovy, <code>whileDo</code> is not part of the standard set of operators, but is part of the
       optional <code>rxjava-computation-expressions</code> package.  <code>whileDo</code> checks a condition
@@ -109,7 +109,7 @@ id: repeat
 
   {% lang_operator RxJava doWhile repeat repeatWhen whileDo %}
     <figure class="variant">
-     <img src="images/repeat.o.png" width="100%" alt="repeat" />
+     <img src="images/repeat.o.png" style="width:100%;" alt="repeat" />
      <figcaption><p>
       RxJava implements this operator as <code>repeat</code>. It does not initiate an Observable,
       but operates on an Observable in such a way that it repeats the sequence emitted by the
@@ -128,7 +128,7 @@ id: repeat
      </ul></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/repeatWhen.f.png" width="100%" alt="repeatWhen" />
+     <img src="images/repeatWhen.f.png" style="width:100%;" alt="repeatWhen" />
      <figcaption><p>
       There is also an operator called <code>repeatWhen</code>. Rather than buffering and replaying
       the sequence from the source Observable, it <em>resubscribes</em> to and mirrors the source
@@ -152,7 +152,7 @@ id: repeat
      </ul></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/doWhile.png" width="100%" alt="doWhile" />
+     <img src="images/doWhile.png" style="width:100%;" alt="doWhile" />
      <figcaption><p>
       In RxJava, <code>doWhile</code> is not part of the standard set of operators, but is part of the
       optional <code>rxjava-computation-expressions</code> package.  <code>doWhile</code> checks a condition
@@ -160,7 +160,7 @@ id: repeat
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/whileDo.png" width="100%" alt="whileDo" />
+     <img src="images/whileDo.png" style="width:100%;" alt="whileDo" />
      <figcaption><p>
       In RxJava, <code>whileDo</code> is not part of the standard set of operators, but is part of the
       optional <code>rxjava-computation-expressions</code> package.  <code>whileDo</code> checks a condition
@@ -171,7 +171,7 @@ id: repeat
 
   {% lang_operator RxJS doWhile repeat while %}
     <figure class="variant">
-     <img src="images/repeat.png" width="100%" alt="repeat" />
+     <img src="images/repeat.png" style="width:100%;" alt="repeat" />
      <figcaption><p>
       RxJS implements this operator as <code>repeat</code>. It accepts as its parameter the item to
       repeat, and optionally two other parameters: the number of times you want the item to repeat,
@@ -202,7 +202,7 @@ Completed</pre></div>
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/doWhile.png" width="100%" alt="doWile" />
+     <img src="images/doWhile.png" style="width:100%;" alt="doWile" />
      <figcaption><p>
       RxJS also implements the <code>doWhile</code> operator. It repeats the source Observable&#8217;s sequence
       of emissions only so long as a condition you specify remains true.
@@ -211,7 +211,7 @@ Completed</pre></div>
 var i = 0;
 
 var source = Rx.Observable.return(42).doWhile(
-    function (x) { return ++i < 2; });
+    function (x) { return ++i &lt; 2; });
 
 var subscription = source.subscribe(
     function (x) { console.log('Next: ' + x); },
@@ -237,7 +237,7 @@ Completed</pre></div>
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/while.png" width="100%" alt="while" />
+     <img src="images/while.png" style="width:100%;" alt="while" />
      <figcaption><p>
       RxJS also implements the <code>while</code> operator. It repeats the source Observable&#8217;s sequence
       of emissions only if a condition you specify is true.
@@ -247,7 +247,7 @@ var i = 0;
 
 // Repeat until condition no longer holds
 var source = Rx.Observable.while(
-    function () { return i++ < 3 },
+    function () { return i++ &lt; 3 },
     Rx.Observable.return(42)
 );
 
