--- a/documentation/operators/skipuntil.html
+++ b/documentation/operators/skipuntil.html
@@ -14,7 +14,7 @@ id: skipUntil
    <h3>discard items emitted by an Observable until a second Observable emits an item</h3>
 
    <figure>
-    <img src="images/skipUntil.c.png" width="100%" alt="SkipUntil" />
+    <img src="images/skipUntil.c.png" style="width:100%;" alt="SkipUntil" />
     <figcaption><p>
      The <span class="operator">SkipUntil</span> subscribes to the source Observable, but ignores its emissions
      until such time as a second Observable emits an item, at which point
@@ -52,7 +52,7 @@ id: skipUntil
 
   {% lang_operator RxGroovy skipUntil %}
      <figure>
-      <img src="images/skipUntil.png" width="100%" alt="skipUntil" />
+      <img src="images/skipUntil.png" style="width:100%;" alt="skipUntil" />
       <figcaption><p>
        In RxGroovy, this operator is implemented as <code>skipUntil</code>.
       </p><p>
@@ -67,7 +67,7 @@ id: skipUntil
 
   {% lang_operator RxJava skipUntil %}
      <figure>
-      <img src="images/skipUntil.png" width="100%" alt="skipUntil" />
+      <img src="images/skipUntil.png" style="width:100%;" alt="skipUntil" />
       <figcaption><p>
        In RxJava, this operator is implemented as <code>skipUntil</code>.
       </p><p>
@@ -82,7 +82,7 @@ id: skipUntil
 
   {% lang_operator RxJS skipUntil %}
      <figure>
-      <img src="images/skipUntil.png" width="100%" alt="skipUntil" />
+      <img src="images/skipUntil.png" style="width:100%;" alt="skipUntil" />
       <figcaption><p>
        RxJS implements the <code>skipUntil</code> operator. You can pass it either an Observable or a
        <code>Promise</code> that it will monitor for an item that triggers <code>skipUntil</code> to begin
