--- a/documentation/operators/subscribeon.html
+++ b/documentation/operators/subscribeon.html
@@ -14,7 +14,7 @@ id: subscribeOn
 <h3>specify the Scheduler on which an Observable will operate</h3>
 
 <figure>
- <img src="images/subscribeOn.c.png" width="100%" alt="SubscribeOn" />
+ <img src="images/subscribeOn.c.png" style="width:100%;" alt="SubscribeOn" />
  <figcaption><p>
   Many implementations of ReactiveX use <a href="../scheduler.html">&ldquo;<code>Scheduler</code>s&rdquo;</a>
   to govern an Observable&#8217;s transitions between threads in a multi-threaded environment. You can instruct
@@ -56,7 +56,7 @@ id: subscribeOn
 
   {% lang_operator RxGroovy subscribeOn unsubscribeOn %}
     <figure class="variant">
-     <img src="images/subscribeOn.png" width="100%" alt="subscribeOn" />
+     <img src="images/subscribeOn.png" style="width:100%;" alt="subscribeOn" />
      <figcaption><p>
       To specify on which Scheduler the Observable should operate, use the <code>subscribeOn</code> operator,
       passing it the appropriate <code>Scheduler</code>.
@@ -76,7 +76,7 @@ id: subscribeOn
 
   {% lang_operator RxJava subscribeOn unsubscribeOn %}
     <figure class="variant">
-     <img src="images/subscribeOn.png" width="100%" alt="subscribeOn" />
+     <img src="images/subscribeOn.png" style="width:100%;" alt="subscribeOn" />
      <figcaption><p>
       To specify on which Scheduler the Observable should operate, use the <code>subscribeOn</code> operator,
       passing it the appropriate <code>Scheduler</code>.
@@ -96,7 +96,7 @@ id: subscribeOn
 
   {% lang_operator RxJS subscribeOn %}
     <figure class="variant">
-     <img src="images/subscribeOn.png" width="100%" alt="subscribeOn" />
+     <img src="images/subscribeOn.png" style="width:100%;" alt="subscribeOn" />
      <figcaption><p>
       To specify on which Scheduler the Observable should operate, use the <code>subscribeOn</code> operator,
       passing it the appropriate <code>Scheduler</code>.
