--- a/documentation/operators/sum.html
+++ b/documentation/operators/sum.html
@@ -14,7 +14,7 @@ id: sum
    <h3>calculates the sum of numbers emitted by an Observable and emits this sum</h3>
 
    <figure>
-    <img src="images/sum.c.png" width="100%" alt="Sum" />
+    <img src="images/sum.c.png" style="width:100%;" alt="Sum" />
     <figcaption><p>
      The <span class="operator">Sum</span> operator operates on an Observable that emits numbers
      (or items that can be evaluated as numbers), and emits a single value: the sum of all of the
@@ -70,7 +70,7 @@ Observable.sumInteger(myObservable).subscribe(
 10
 Sequence complete</pre></div>
      <figure>
-      <img src="images/sum.f.png" width="100%" alt="sum" />
+      <img src="images/sum.f.png" style="width:100%;" alt="sum" />
       <figcaption><p>
        You can also sum not the items themselves but the results of a function applied to each
        item, as in the illustration above, which emits the sum of the number of sides on the figures
@@ -78,7 +78,7 @@ Sequence complete</pre></div>
       </p></figcaption>
      </figure>
     <figure class="variant">
-     <img src="images/St.stringConcat.png" width="100%" alt="stringConcat" />
+     <img src="images/St.stringConcat.png" style="width:100%;" alt="stringConcat" />
      <figcaption><p>
       In the distinct <code>StringObservable</code> class (not part of RxGroovy by default) there is also a
       <code>stringConcat</code> operator that converts an Observable that emits a sequence of strings into an
@@ -86,7 +86,7 @@ Sequence complete</pre></div>
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/St.join.png" width="100%" alt="join" />
+     <img src="images/St.join.png" style="width:100%;" alt="join" />
      <figcaption><p>
       In the distinct <code>StringObservable</code> class (not part of RxGroovy by default) there is also a
       <code>join</code> operator that converts an Observable that emits a sequence of strings into an
@@ -103,7 +103,7 @@ Sequence complete</pre></div>
       <code>sumFloat</code>, <code>sumInteger</code>, and <code>sumLong</code>.
      </p>
      <figure>
-      <img src="images/sum.f.png" width="100%" alt="sum" />
+      <img src="images/sum.f.png" style="width:100%;" alt="sum" />
       <figcaption><p>
        You can also sum not the items themselves but the results of a function applied to each
        item, as in the illustration above, which emits the sum of the number of sides on the figures
@@ -111,7 +111,7 @@ Sequence complete</pre></div>
       </p></figcaption>
      </figure>
     <figure class="variant">
-     <img src="images/St.stringConcat.png" width="100%" alt="stringConcat" />
+     <img src="images/St.stringConcat.png" style="width:100%;" alt="stringConcat" />
      <figcaption><p>
       In the distinct <code>StringObservable</code> class (not part of RxJava by default) there is also a
       <code>stringConcat</code> operator that converts an Observable that emits a sequence of strings into an
@@ -119,7 +119,7 @@ Sequence complete</pre></div>
      </p></figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/St.join.png" width="100%" alt="join" />
+     <img src="images/St.join.png" style="width:100%;" alt="join" />
      <figcaption><p>
       In the distinct <code>StringObservable</code> class (not part of RxJava by default) there is also a
       <code>join</code> operator that converts an Observable that emits a sequence of strings into an
@@ -131,7 +131,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJS sum %}
      <figure>
-      <img src="images/sum.png" width="100%" alt="sum" />
+      <img src="images/sum.png" style="width:100%;" alt="sum" />
       <figcaption><p>
        RxJS implements this operator as <code>sum</code>. The following code sample shows how
        to use it:
@@ -155,7 +155,7 @@ Next: 45
 Completed</pre></div></figcaption>
      </figure>
      <figure>
-      <img src="images/sum.f.png" width="100%" alt="sum" />
+      <img src="images/sum.f.png" style="width:100%;" alt="sum" />
       <figcaption><p>
        You can also sum not the items themselves but the results of a function applied to each
        item, as in the illustration above, which emits the sum number of sides on the figures
