--- a/documentation/operators/takeuntil.html
+++ b/documentation/operators/takeuntil.html
@@ -14,7 +14,7 @@ id: takeUntil
    <h3>discard any items emitted by an Observable after a second Observable emits an item or terminates</h3>
 
    <figure>
-    <img src="images/takeUntil.c.png" width="100%" alt="TakeUntil" />
+    <img src="images/takeUntil.c.png" style="width:100%;" alt="TakeUntil" />
     <figcaption><p>
      The <span class="operator">TakeUntil</span> subscribes and begins mirroring the source Observable. It also
      monitors a second Observable that you provide. If this second Observable emits an item or sends a
@@ -53,7 +53,7 @@ id: takeUntil
 
   {% lang_operator RxGroovy takeUntil %}
      <figure>
-      <img src="images/takeUntil.png" width="100%" alt="takeUntil" />
+      <img src="images/takeUntil.png" style="width:100%;" alt="takeUntil" />
       <figcaption><p>
        In RxGroovy, this operator is implemented as <code>takeUntil</code>. Note that the second Observable can
        cause <code>takeUntil</code> to quit emitting items either by emitting an item or by issuing an
@@ -70,7 +70,7 @@ id: takeUntil
 
   {% lang_operator RxJava takeUntil %}
      <figure>
-      <img src="images/takeUntil.png" width="100%" alt="takeUntil" />
+      <img src="images/takeUntil.png" style="width:100%;" alt="takeUntil" />
       <figcaption><p>
        In RxJava, this operator is implemented as <code>takeUntil</code>. Note that the second Observable can
        cause <code>takeUntil</code> to quit emitting items either by emitting an item or by issuing an
@@ -87,7 +87,7 @@ id: takeUntil
 
   {% lang_operator RxJS takeUntil %}
      <figure>
-      <img src="images/takeUntil.png" width="100%" alt="takeUntil" />
+      <img src="images/takeUntil.png" style="width:100%;" alt="takeUntil" />
       <figcaption><p>
        RxJS implements the <code>takeUntil</code> operator. You can pass it either an Observable or a
        <code>Promise</code> that it will monitor for an item that triggers <code>takeUntil</code> to stop
