--- a/documentation/operators/timeinterval.html
+++ b/documentation/operators/timeinterval.html
@@ -13,7 +13,7 @@ id: timeInterval
    <h1>TimeInterval</h1>
    <h3>convert an Observable that emits items into one that emits indications of the amount of time elapsed between those emissions</h3>
    <figure>
-    <img src="images/timeInterval.c.png" width="100%" alt="TimeInterval" />
+    <img src="images/timeInterval.c.png" style="width:100%;" alt="TimeInterval" />
     <figcaption><p>
      The <span class="operator">TimeInterval</span> operator intercepts the items from the source Observable
      and emits in their place objects that indicate the amount of time that elapsed between pairs of emissions.
@@ -44,7 +44,7 @@ id: timeInterval
 
   {% lang_operator RxGroovy timeInterval %}
      <figure>
-      <img src="images/timeInterval.png" width="100%" alt="timeInterval" />
+      <img src="images/timeInterval.png" style="width:100%;" alt="timeInterval" />
       <figcaption><p>
        The <cite>timeInterval</cite> operator converts a source Observable into an Observable that emits
        indications of the amount of time lapsed between consecutive emissions of the source Observable. The
@@ -66,7 +66,7 @@ id: timeInterval
 
   {% lang_operator RxJava timeInterval %}
      <figure>
-      <img src="images/timeInterval.png" width="100%" alt="timeInterval" />
+      <img src="images/timeInterval.png" style="width:100%;" alt="timeInterval" />
       <figcaption><p>
        The <cite>timeInterval</cite> operator converts a source Observable into an Observable that emits
        indications of the amount of time lapsed between consecutive emissions of the source Observable. The
@@ -88,7 +88,7 @@ id: timeInterval
 
   {% lang_operator RxJS timeInterval %}
      <figure>
-      <img src="images/timeInterval.png" width="100%" alt="timeInterval" />
+      <img src="images/timeInterval.png" style="width:100%;" alt="timeInterval" />
       <figcaption><p>
        The <code>timeInterval</code> operator converts a source Observable into an Observable that emits
        indications of the amount of time lapsed between consecutive emissions of the source Observable. The
