--- a/documentation/operators/connect.html
+++ b/documentation/operators/connect.html
@@ -14,7 +14,7 @@ id: connect
 <h3>instruct a connectable Observable to begin emitting items to its subscribers</h3>
 
 <figure>
- <img src="images/publishConnect.c.png" width="100%" alt="Connect" />
+ <img src="images/publishConnect.c.png" style="width:100%;" alt="Connect" />
  <figcaption><p>
   A <dfn>connectable Observable</dfn> resembles an ordinary Observable, except that it does not begin
   emitting items when it is subscribed to, but only when the <span class="operator">Connect</span>
@@ -49,7 +49,7 @@ id: connect
 
   {% lang_operator RxGroovy connect %}
     <figure class="variant">
-     <img src="images/publishConnect.png" width="100%" alt="connect" />
+     <img src="images/publishConnect.png" style="width:100%;" alt="connect" />
      <figcaption><p>
       In RxGroovy, the <code>connect</code> operator is a method of the
       <code>ConnectableObservable</code> interface. You can use the <code>publish</code> operator to
@@ -75,7 +75,7 @@ id: connect
 
   {% lang_operator RxJava connect %}
     <figure class="variant">
-     <img src="images/publishConnect.png" width="100%" alt="connect" />
+     <img src="images/publishConnect.png" style="width:100%;" alt="connect" />
      <figcaption><p>
       In RxJava, the <code>connect</code> operator is a method of the
       <code>ConnectableObservable</code> interface. You can use the <code>publish</code> operator to
@@ -101,7 +101,7 @@ id: connect
 
   {% lang_operator RxJS connect %}
     <figure class="variant">
-     <img src="images/publishConnect.png" width="100%" alt="connect" />
+     <img src="images/publishConnect.png" style="width:100%;" alt="connect" />
      <figcaption><p>
       In RxJS, the <code>connect</code> operator is a method of the
       <code>ConnectableObservable</code> prototype. You can use the <code>publish</code> operator to
