--- a/documentation/operators/create.html
+++ b/documentation/operators/create.html
@@ -14,7 +14,7 @@ id: create
 <h3>create an Observable from scratch by means of a function</h3>
 
 <figure>
- <img src="images/create.c.png" width="100%" alt="Create" />
+ <img src="images/create.c.png" style="width:100%;" alt="Create" />
  <figcaption><p>
   You can create an Observable from scratch by using the <span class="operator">Create</span>
   operator. You pass this operator a function that accepts the observer as its parameter. Write this
@@ -52,7 +52,7 @@ id: create
 
   {% lang_operator RxGroovy create %}
     <figure class="variant">
-     <img src="images/create.png" width="100%" alt="create" />
+     <img src="images/create.png" style="width:100%;" alt="create" />
      <figcaption><p>
       RxGroovy implements this operator as <code>create</code>.
      </p>
@@ -60,7 +60,7 @@ id: create
      <div class="code groovy"><pre>
 def myObservable = Observable.create({ aSubscriber ->
   try {
-    for (int i = 1; i < 1000000; i++) {
+    for (int i = 1; i &lt; 1000000; i++) {
       if (aSubscriber.isUnsubscribed()) {
         return;
       }
@@ -91,7 +91,7 @@ def myObservable = Observable.create({ aSubscriber ->
 
   {% lang_operator RxJava create %}
     <figure class="variant">
-     <img src="images/create.png" width="100%" alt="create" />
+     <img src="images/create.png" style="width:100%;" alt="create" />
      <figcaption><p>
       RxJava implements this operator as <code>create</code>.
      </p><p>
@@ -101,12 +101,12 @@ def myObservable = Observable.create({ aSubscriber ->
      </p>
      <h4>Sample Code</h4>
      <div class="code java"><pre>
-Observable.create(new Observable.OnSubscribe<Integer>() {
+Observable.create(new Observable.OnSubscribe&lt;Integer&gt;() {
     @Override
-    public void call(Subscriber<? super Integer> observer) {
+    public void call(Subscriber&lt;? super Integer&gt; observer) {
         try {
             if (!observer.isUnsubscribed()) {
-                for (int i = 1; i < 5; i++) {
+                for (int i = 1; i &lt; 5; i++) {
                     observer.onNext(i);
                 }
                 observer.onCompleted();
@@ -115,7 +115,7 @@ Observable.create(new Observable.OnSubscribe<Integer>() {
             observer.onError(e);
         }
     }
- } ).subscribe(new Subscriber<Integer>() {
+ } ).subscribe(new Subscriber&lt;Integer&gt;() {
         @Override
         public void onNext(Integer item) {
             System.out.println("Next: " + item);
@@ -149,7 +149,7 @@ Sequence complete.</pre></div>
 
   {% lang_operator RxJS create createWithDisposable generate generateWithAbsoluteTime generateWithRelativeTime %}
     <figure class="variant">
-     <img src="images/create.png" width="100%" alt="create" />
+     <img src="images/create.png" style="width:100%;" alt="create" />
      <figcaption><p>
       RxJS implements this operator as <code>create</code> (there is also an alternate name for the
       same operator: <code>createWithDisposable</code>).
@@ -203,7 +203,7 @@ Completed</pre></div>
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/generate.png" width="100%" alt="generate" />
+     <img src="images/generate.png" style="width:100%;" alt="generate" />
      <figcaption><p>
       You can use the <code>generate</code> operator to create simple Observables that can generate their
       next emissions, and can determine when to terminate, based on the value of the previous emission. The
@@ -223,7 +223,7 @@ Completed</pre></div>
      <div class="code javascript"><pre>
 var source = Rx.Observable.generate(
     0,
-    function (x) { return x < 3; },
+    function (x) { return x &lt; 3; },
     function (x) { return x + 1; },
     function (x) { return x; }
 );
@@ -249,7 +249,7 @@ Completed</pre></div>
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/generateWithRelativeTime.png" width="100%" alt="generateWithRelativeTime" />
+     <img src="images/generateWithRelativeTime.png" style="width:100%;" alt="generateWithRelativeTime" />
      <figcaption><p>
       You can use the <code>generateWithRelativeTime</code> operator to create simple Observables that can
       generate their next emissions, and can determine when to terminate, based on the value of the previous
@@ -271,7 +271,7 @@ Completed</pre></div>
      <div class="code javascript"><pre>
 var source = Rx.Observable.generateWithRelativeTime(
     1,
-    function (x) { return x < 4; },
+    function (x) { return x &lt; 4; },
     function (x) { return x + 1; },
     function (x) { return x; },
     function (x) { return 100 * x; }
@@ -297,7 +297,7 @@ Completed</pre></div>
      </figcaption>
     </figure>
     <figure class="variant">
-     <img src="images/generateWithAbsoluteTime.png" width="100%" alt="generateWithAbsoluteTime" />
+     <img src="images/generateWithAbsoluteTime.png" style="width:100%;" alt="generateWithAbsoluteTime" />
      <figcaption><p>
       You can use the <code>generateWithAbsoluteTime</code> operator to create simple Observables that can
       generate their next emissions, and can determine when to terminate, based on the value of the previous
@@ -319,7 +319,7 @@ Completed</pre></div>
      <div class="code javascript"><pre>
 var source = Rx.Observable.generate(
     1,
-    function (x) { return x < 4; },
+    function (x) { return x &lt; 4; },
     function (x) { return x + 1; },
     function (x) { return x; },
     function (x) { return Date.now() + (100 * x); }
