--- a/documentation/operators/filter.html
+++ b/documentation/operators/filter.html
@@ -13,7 +13,7 @@ id: filter
    <h1>Filter</h1>
    <h3>emit only those items from an Observable that pass a predicate test</h3>
    <figure>
-    <img src="images/filter.c.png" width="100%" alt="Filter" />
+    <img src="images/filter.c.png" style="width:100%;" alt="Filter" />
     <figcaption><p>
      The <span class="operator">Filter</span> operator filters an Observable by only allowing items through
      that pass a test that you specify in the form of a predicate function.
@@ -44,7 +44,7 @@ id: filter
 
   {% lang_operator RxGroovy filter ofType %}
      <figure>
-      <img src="images/filter.png" width="100%" alt="filter" />
+      <img src="images/filter.png" style="width:100%;" alt="filter" />
       <figcaption><p>
        RxGroovy implements this operator as <code>filter</code>. You can filter an Observable, discarding any
        items that do not meet some test, by passing a filtering function into the <code>filter</code> operator.
@@ -65,7 +65,7 @@ numbers.filter({ 0 == (it % 2) }).subscribe(
 4
 6
 8
-Sequence complete</pre></div></figcaption>
+Sequence complete</pre></div>
       <p>
        <code>filter</code> does not by default operate on any particular
        <a href="../scheduler.html">Scheduler</a>.
@@ -75,7 +75,7 @@ Sequence complete</pre></div></figcaption>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/ofClass.png" width="100%" alt="ofType" />
+      <img src="images/ofClass.png" style="width:100%;" alt="ofType" />
       <figcaption><p>
        There is also a specialized form of the <span class="operator">Filter</span> operator in RxGroovy that
        filters an Observable so that it only emits items of a particular class.
@@ -91,19 +91,19 @@ Sequence complete</pre></div></figcaption>
 
   {% lang_operator RxJava filter ofType %}
      <figure>
-      <img src="images/filter.png" width="100%" alt="filter" />
+      <img src="images/filter.png" style="width:100%;" alt="filter" />
       <figcaption><p>
        RxJava implements this operator as <code>filter</code>.
       </p>
      <h4>Sample Code</h4>
      <div class="code java"><pre>
 Observable.just(1, 2, 3, 4, 5)
-          .filter(new Func1<Integer, Boolean>() {
+          .filter(new Func1&lt;Integer, Boolean&gt;() {
               @Override
               public Boolean call(Integer item) {
-                return( item < 4 );
+                return( item &lt; 4 );
               }
-          }).subscribe(new Subscriber<Integer>() {
+          }).subscribe(new Subscriber&lt;Integer&gt;() {
         @Override
         public void onNext(Integer item) {
             System.out.println("Next: " + item);
@@ -133,7 +133,7 @@ Sequence complete.</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/ofClass.png" width="100%" alt="ofType" />
+      <img src="images/ofClass.png" style="width:100%;" alt="ofType" />
       <figcaption><p>
        There is also a specialized form of the <span class="operator">Filter</span> operator in RxGroovy that
        filters an Observable so that it only emits items of a particular class.
@@ -149,7 +149,7 @@ Sequence complete.</pre></div>
 
   {% lang_operator RxJS filter where %}
      <figure>
-      <img src="images/filter.png" width="100%" alt="filter" />
+      <img src="images/filter.png" style="width:100%;" alt="filter" />
       <figcaption><p>
        RxJS implements this operator under two names, but with identical behavior: <code>filter</code> and
        <code>where</code>. This operator takes two parameters: the predicate function, and an optional object
