--- a/documentation/operators/interval.html
+++ b/documentation/operators/interval.html
@@ -14,7 +14,7 @@ id: interval
 <h3>create an Observable that emits a sequence of integers spaced by a given time interval</h3>
 
 <figure>
- <img src="images/interval.c.png" width="100%" alt="Interval" />
+ <img src="images/interval.c.png" style="width:100%;" alt="Interval" />
  <figcaption><p>
   The <span class="operator">Interval</span> operator returns an Observable that emits an infinite sequence of
   ascending integers, with a constant interval of time of your choosing between emissions.
@@ -49,7 +49,7 @@ id: interval
 
   {% lang_operator RxGroovy interval %}
     <figure class="variant">
-     <img src="images/interval.png" width="100%" alt="interval" />
+     <img src="images/interval.png" style="width:100%;" alt="interval" />
      <figcaption><p>
       RxGroovy implements this operator as <code>interval</code>. It accepts as its parameters a
       span of time to wait between subsequent emissions and the <code>TimeUnit</code> in which this
@@ -74,7 +74,7 @@ id: interval
 
   {% lang_operator RxJava interval %}
     <figure class="variant">
-     <img src="images/interval.png" width="100%" alt="interval" />
+     <img src="images/interval.png" style="width:100%;" alt="interval" />
      <figcaption><p>
       RxJava implements this operator as <code>interval</code>. It accepts as its parameters a
       span of time to wait between subsequent emissions and the <code>TimeUnit</code> in which this
@@ -99,7 +99,7 @@ id: interval
 
   {% lang_operator RxJS interval %}
     <figure class="variant">
-     <img src="images/interval.png" width="100%" alt="interval" />
+     <img src="images/interval.png" style="width:100%;" alt="interval" />
      <figcaption><p>
       RxJS implements this operator as <code>interval</code>. It accepts as its parameter the number
       of milliseconds to wait between subsequent emissions.
