--- a/documentation/operators/range.html
+++ b/documentation/operators/range.html
@@ -14,7 +14,7 @@ id: range
 <h3>create an Observable that emits a particular range of sequential integers</h3>
 
 <figure>
- <img src="images/range.c.png" width="100%" alt="Range" />
+ <img src="images/range.c.png" style="width:100%;" alt="Range" />
  <figcaption><p>
   The <span class="operator">Range</span> operator emits a range of sequential integers, in order,
   where you select the start of the range and its length.
@@ -46,7 +46,7 @@ id: range
 
   {% lang_operator RxGroovy range %}
     <figure class="variant">
-     <img src="images/range.png" width="100%" alt="range" />
+     <img src="images/range.png" style="width:100%;" alt="range" />
      <figcaption><p>
       RxGroovy implements this operator as <code>range</code>. It accepts as its parameters the
       start value of the range and the number of items in the range. If you set that number of
@@ -70,7 +70,7 @@ def myObservable = Observable.range(5, 3);</pre></div>
 
   {% lang_operator RxJava range %}
     <figure class="variant">
-     <img src="images/range.png" width="100%" alt="range" />
+     <img src="images/range.png" style="width:100%;" alt="range" />
      <figcaption><p>
       RxJava implements this operator as <code>range</code>. It accepts as its parameters the
       start value of the range and the number of items in the range. If you set that number of
@@ -90,7 +90,7 @@ def myObservable = Observable.range(5, 3);</pre></div>
 
   {% lang_operator RxJS range %}
     <figure class="variant">
-     <img src="images/range.png" width="100%" alt="range" />
+     <img src="images/range.png" style="width:100%;" alt="range" />
      <figcaption><p>
       RxJS implements this operator as <code>range</code>. It accepts as its parameters the
       start value of the range and the number of items in the range.
