--- a/documentation/operators/scan.html
+++ b/documentation/operators/scan.html
@@ -14,7 +14,7 @@ id: scan
    <h3>apply a function to each item emitted by an Observable, sequentially, and emit each successive value</h3>
 
    <figure>
-    <img src="images/scan.c.png" width="100%" alt="Scan" />
+    <img src="images/scan.c.png" style="width:100%;" alt="Scan" />
     <figcaption><p>
      The <span class="operator">Scan</span> operator applies a function to the first item emitted
      by the source Observable and then emits the result of that function as its own first emission.
@@ -30,7 +30,7 @@ id: scan
    <h4>See Also</h4>
    <ul>
     <li><a href="reduce.html"><span class="operator">Reduce</span></a></li>
-    <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#Scan"><cite>Introduction to Rx</cite>: Scan</li>
+    <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#Scan"><cite>Introduction to Rx</cite>: Scan</a></li>
     <li><a href="http://rxmarbles.com/#scan">RxMarbles: <code>scan</code></a></li>
    </ul>
 
@@ -51,7 +51,7 @@ id: scan
 
   {% lang_operator RxGroovy scan %}
      <figure>
-      <img src="images/scan.png" width="100%" alt="scan" />
+      <img src="images/scan.png" style="width:100%;" alt="scan" />
       <figcaption><p>
        RxGroovy implements this operator as <code>scan</code>. The following code, for example,
        takes an Observable that emits a consecutive sequence of <i>n</i> integers starting with
@@ -80,7 +80,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/scanSeed.png" width="100%" alt="scan" />
+      <img src="images/scanSeed.png" style="width:100%;" alt="scan" />
       <figcaption><p>
        There is also a variant of <code>scan</code> to which you can pass a seed value to pass
        to the accumulator function the first time it is called (for the first emission from the
@@ -100,7 +100,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJava scan %}
      <figure>
-      <img src="images/scan.png" width="100%" alt="scan" />
+      <img src="images/scan.png" style="width:100%;" alt="scan" />
       <figcaption><p>
        RxJava implements this operator as <code>scan</code>.
       </p>
@@ -140,7 +140,7 @@ Sequence complete.</pre></div>
       </ul></figcaption>
      </figure>
      <figure>
-      <img src="images/scanSeed.png" width="100%" alt="scan" />
+      <img src="images/scanSeed.png" style="width:100%;" alt="scan" />
       <figcaption><p>
        There is also a variant of <code>scan</code> to which you can pass a seed value to pass
        to the accumulator function the first time it is called (for the first emission from the
@@ -160,7 +160,7 @@ Sequence complete.</pre></div>
 
   {% lang_operator RxJS expand scan %}
      <figure>
-      <img src="images/scan.png" width="100%" alt="scan" />
+      <img src="images/scan.png" style="width:100%;" alt="scan" />
       <figcaption><p>
        RxJS implements the <code>scan</code> operator.
       </p>
@@ -184,7 +184,7 @@ Completed</pre></div>
       </figcaption>
      </figure>
      <figure>
-      <img src="images/scanSeed.js.png" width="100%" alt="scan" />
+      <img src="images/scanSeed.js.png" style="width:100%;" alt="scan" />
       <figcaption><p>
        You can optionally pass <code>scan</code> a seed value as a first parameter.
        <code>scan</code> will pass this seed value to the accumulator function the first time it is
@@ -220,7 +220,7 @@ Completed</pre></div></figcaption>
       <li><code>rx.lite.compat.js</code></li>
      </ul>
      <figure>
-      <img src="images/expand.png" width="100%" alt="expand" />
+      <img src="images/expand.png" style="width:100%;" alt="expand" />
       <figcaption><p>
        RxJS also implements the <code>expand</code> operator, which is somewhat similar. Rather than applying
        the function to the previous return value of the function combined with the next item emitted from the
