--- a/documentation/operators/serialize.html
+++ b/documentation/operators/serialize.html
@@ -14,7 +14,7 @@ id: serialize
 <h3>force an Observable to make serialized calls and to be well-behaved</h3>
 
 <figure>
- <img src="images/serialize.c.png" width="100%" alt="Serialize" />
+ <img src="images/serialize.c.png" style="width:100%;" alt="Serialize" />
  <figcaption><p>
   It is possible for an Observable to invoke its observers&#8217; methods asynchronously, perhaps from
   different threads. This could make such an Observable poorly-behaved, in that it might try to invoke
@@ -42,7 +42,7 @@ id: serialize
 
   {% lang_operator RxGroovy serialize %}
     <figure class="variant">
-     <img src="images/synchronize.png" width="100%" alt="serialize" />
+     <img src="images/synchronize.png" style="width:100%;" alt="serialize" />
      <figcaption><p>
       RxGroovy implements this operator as <code>serialize</code>. It does not by default operate on any
       particular <a href="../scheduler.html">Scheduler</a>.
@@ -55,7 +55,7 @@ id: serialize
 
   {% lang_operator RxJava serialize %}
     <figure class="variant">
-     <img src="images/synchronize.png" width="100%" alt="serialize" />
+     <img src="images/synchronize.png" style="width:100%;" alt="serialize" />
      <figcaption><p>
       RxJava implements this operator as <code>serialize</code>. It does not by default operate on any
       particular <a href="../scheduler.html">Scheduler</a>.
