--- a/documentation/operators/takewhile.html
+++ b/documentation/operators/takewhile.html
@@ -14,7 +14,7 @@ id: takeWhile
    <h3>mirror items emitted by an Observable until a specified condition becomes false</h3>
 
    <figure>
-    <img src="images/takeWhile.c.png" width="100%" alt="TakeWhile" />
+    <img src="images/takeWhile.c.png" style="width:100%;" alt="TakeWhile" />
     <figcaption><p>
      The <span class="operator">TakeWhile</span> mirrors the source Observable until such time as some condition
      you specify becomes false, at which point <span class="operator">TakeWhile</span> stops mirroring the
@@ -51,7 +51,7 @@ id: takeWhile
 
   {% lang_operator RxGroovy takeWhile %}
      <figure>
-      <img src="images/takeWhile.png" width="100%" alt="takeWhile" />
+      <img src="images/takeWhile.png" style="width:100%;" alt="takeWhile" />
       <figcaption><p>
        The <code>takeWhile</code> operator returns an Observable that mirrors the behavior of the source
        Observable until such time as a function, applied to an item emitted by that Observable, returns
@@ -61,7 +61,7 @@ id: takeWhile
       <div class="code groovy"><pre>
 numbers = Observable.from( [1, 2, 3, 4, 5, 6, 7, 8, 9] );
 
-numbers.takeWhile({ ((it < 6) || (0 == (it % 2))) }).subscribe(
+numbers.takeWhile({ ((it &lt; 6) || (0 == (it % 2))) }).subscribe(
   { println(it); },                          // onNext
   { println("Error: " + it.getMessage()); }, // onError
   { println("Sequence complete"); }          // onCompleted
@@ -86,7 +86,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJava takeWhile %}
      <figure>
-      <img src="images/takeWhile.png" width="100%" alt="takeWhile" />
+      <img src="images/takeWhile.png" style="width:100%;" alt="takeWhile" />
       <figcaption><p>
        The <code>takeWhile</code> operator returns an Observable that mirrors the behavior of the source
        Observable until such time as a function, applied to an item emitted by that Observable, returns
@@ -104,7 +104,7 @@ Sequence complete</pre></div>
 
   {% lang_operator RxJS takeWhile %}
      <figure>
-      <img src="images/takeWhile.png" width="100%" alt="takeWhile" />
+      <img src="images/takeWhile.png" style="width:100%;" alt="takeWhile" />
       <figcaption><p>
        RxJS implements the <code>takeWhile</code> operator. You pass it a function that governs the takeping
        process. <code>takeWhile</code> calls that function for each item emitted by the source Observable
@@ -124,7 +124,7 @@ Sequence complete</pre></div>
       <h4>Sample Code</h4>
       <div class="code javascript"><pre>
 var source = Rx.Observable.range(1, 5)
-    .takeWhile(function (x) { return x < 3; });
+    .takeWhile(function (x) { return x &lt; 3; });
 
 var subscription = source.subscribe(
     function (x) { console.log('Next: ' + x); },
